Turn AI chat into an agent that can create tasks, habits, notes, events, goals, and projects
Uses Gemini's native function-calling API so the assistant can act on the
user's request instead of only describing it. Tool-call turns stay in-memory
for the duration of a single reply -- only the final natural-language text is
persisted, so no DB schema or frontend changes were needed. Optional
project/goal/folder references are resolved by name against the user's own
records; no match just leaves the item standalone.

Verified the wire protocol against the live Gemini API before writing DTOs:
functionCall parts carry a thoughtSignature that must be echoed back on the
next turn or the API 400s, and the functionResponse turn's role must be
"user" (role "function" is rejected), neither of which is obvious from the
existing codebase.